@@ -1,0 +1,5 @@
+#!/bin/sh
+set -e
+mkdir -p m4
+autoreconf -f -i
+rm -rf autom4te.cache
