@@ -21,6 +21,8 @@
  * main routines
  */
 
+#include <config.h>
+
 #include <stdio.h>
 #include <string.h>
 #include <stdlib.h>
