@@ -21,6 +21,8 @@
  * miscellaneous functions
  */
 
+#include <config.h>
+
 #include <stdio.h>
 #include <stdarg.h>
 
