@@ -21,6 +21,8 @@
  * provides the XML parsing code for policy files, via expat (xmltok)
  */
 
+#include <config.h>
+
 #include <stdio.h>
 #include <string.h>
 #include <stdlib.h>
